--- a/styles/antidotincl.css
+++ b/styles/antidotincl.css
@@ -2,7 +2,7 @@
 @font-face {
   font-family: 'ClanOT-Book';
   src: url('../fonts/ClanOT-Book.eot?#iefix') format('embedded-opentype'),  url('../fonts/ClanOT-Book.otf')  format('opentype'),
-	     url('ClanOT-Book.woff') format('woff'), url('../fonts/ClanOT-Book.ttf')  format('truetype'), url('../fonts/ClanOT-Book.svg#ClanOT-Book') format('svg');
+	     url('../fonts/ClanOT-Book.woff') format('woff'), url('../fonts/ClanOT-Book.ttf')  format('truetype'), url('../fonts/ClanOT-Book.svg#ClanOT-Book') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -48,6 +48,10 @@
   order: 2;
   margin-left: 5vw;
   max-width: 30vw;
+}
+
+.infos .logo {
+  margin-right: -18px;
 }
 
 .infos .name {
@@ -171,4 +175,44 @@
   border-color: #ccc;
   border-style: solid;
   box-shadow: 10px 20px 15px silver;
+}
+
+@media only screen and (max-device-width: 600px) {
+
+  .antidot {
+    flex-direction: column;
+  }
+
+  .infos {
+    position: relative;
+    margin-top: calc(68px + 5vh);
+    margin-right: 5vw;
+    order: 1;
+    margin-left: 5vw;
+    max-width: 100vw;
+  }
+
+  .infos .logo {
+    position: fixed;
+    top: 5vw;
+    right: 6vw;
+  }
+
+  .issue-list .issue {
+    left: -33vw;
+    width: 110vw;
+    position: relative;
+  }
+
+  .issue-list .issue .issue-nbr,
+  .issue-list .issue .date,
+  .issue-list .issue .title,
+  .issue-list .issue .abstract
+   {
+    margin-left: 30px;
+  }
+
+  .issue-list .issue .cover img {
+    transform: rotate(23deg);
+  }
 }
